<resources>
    <string name="app_name">SECURITY HOME</string>
    <string name="snackBar_dismiss_label">Cerrar</string>
    <string name="title_activity_sensor">Sensor</string>
    <string name="nombre">SECURITY HOME</string>
    <string name="snackbar_dismiss_label">Cerrar</string>
    <string name="notificaciones">NOTIFICACIONES</string>
    <string name="boton_ingresar">INGRESAR</string>
    <string name="boton_registrar">REGISTRAR</string>
    <string name="inicio_sesion">INICIO DE SESIÓN</string>
    <string name="registro">REGISTRO</string>
    <string name="camara">CAMARA</string>
    <string name="servicio">SERVICIO</string>
    <string name="seleccioneServicio">Seleccione un servicio:</string>
    <string name="ubicacion">UBICACION</string>
    <string name="contactos">CONTACTOS</string>
    <string name="listaCasas">CASAS</string>
    <string name="sensores">SENSORES</string>
    <string name="agregarCasa">AGREGAR CASA</string>
    <string name="Casas">CASAS</string>
    <string name="listado">Ver Casas</string>
    <string name="agregar">AGREGAR</string>
    <string name="mapa">MAPA</string>
    <string name="chat">CHAT</string>
    <string name="permission_denied_label">No pude obtener el permiso necesario</string>
    <string name="capture_saved">Imagen guardada correctamente.</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="signup_label">SignUp</string>
    <string name="login_label">Login</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="mail_error_label">El email no puede estar vacio.</string>
    <string name="error_pass_label">El password no puede estar vacio.</string>
    <string name="manu_logout">Logout</string>
    <string name="menu_profile">Profile</string>
    <string name="usuario">NOMBRE</string>
    <string name="codigo">CODIGO</string>
    <string name="rol">ROL</string>
    <string name="camara_casa_en_vivo">Camara en Vivo</string>
    <string name="message_chat_hint">Mensaje</string>
    <string name="temperature">%.1f °C</string>
    <string name="sensor_temp">TEMPERATURA</string>
    <string name="sensor_move">PROXIMIDAD</string></resources>