<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_degrado"
    android:gravity="center">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:src="@mipmap/logo_securityhome">
    </ImageView>
    <Space
        android:id="@+id/espacio"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/logo"></Space>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/espacio"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/security_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/espacio"
            android:layout_centerVertical="true"
            android:text="@string/nombre"
            android:textColor="#000000"
            android:textSize="39sp"
            android:fontFamily="@font/orbitron_medium"
            android:layout_gravity="center">
        </TextView>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/boton_ingresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/naranja_suave"
                android:text="@string/boton_ingresar"
                android:textAlignment="center"
                android:fontFamily="@font/anonymouspro_bold"
                android:textSize="14sp">
            </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/boton_registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/naranja_suave"
                android:text="@string/boton_registrar"
                android:gravity="center"
                android:textSize="14sp"
                android:fontFamily="@font/anonymouspro_bold">
            </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>