<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_degrado"
    tools:context=".activities.AgregarCasa">
    <android.widget.Toolbar
        android:id="@+id/barra1_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        tools:ignore="MissingConstraints"
        android:elevation="-4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Casas"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:fontFamily="@font/anonymouspro_bold">
        </TextView>
    </android.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="410dp"
        android:layout_height="621dp"
        app:layout_constraintBottom_toTopOf="@+id/barraInferior"
        app:layout_constraintTop_toBottomOf="@+id/barra1_login"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/usuario"
                android:minHeight="45dp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingHorizontal="40dp"
                android:layout_width="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerUbicacion"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/ubicacion"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/registerName"
                android:paddingHorizontal="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerRol"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/rol"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/registerUbicacion"
                android:paddingHorizontal="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerCodigo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/codigo"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:layout_constraintTop_toBottomOf="@+id/registerRol"
                android:paddingHorizontal="40dp"
                android:minHeight="48dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/boton_agregar"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/verde"
                android:fontFamily="@font/anonymouspro_bold"
                android:text="@string/agregar"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/registerCodigo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listacasas"
                android:layout_width="match_parent"
                android:layout_height="174dp"
                android:divider="@android:color/transparent"
                android:orientation="vertical"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/boton_agregar"
                android:layout_marginTop="30dp"></androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <android.widget.Toolbar
        android:id="@+id/barraInferior"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imagenLogoToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/logo_securityhome"></ImageView>

    </android.widget.Toolbar>
</androidx.constraintlayout.widget.ConstraintLayout>