<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Servicio"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/fondo_degrado">

    <android.widget.Toolbar
        android:id="@+id/barra1"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:elevation="-4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/anonymouspro_bold"
            android:text="@string/servicio"
            android:textSize="30sp"></TextView>

        <ImageButton
            android:id="@+id/boton_notificaciones"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/verde"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_notifications_active_24"></ImageButton>
    </android.widget.Toolbar>


    <TextView
        android:id="@+id/chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/barra1"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/anonymouspro_bold"
        android:text="@string/chat"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/barra1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        ></TextView>

    <ImageButton
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/chat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/gris_verde"
        android:src="@mipmap/logo_securityhome_foreground"
        app:layout_constraintTop_toBottomOf="@+id/chat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></ImageButton>

    <TextView
        android:id="@+id/selectOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/anonymouspro_bold"
        android:text="@string/seleccioneServicio"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectOption"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/selectOption"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <com.google.android.material.button.MaterialButton

            android:id="@+id/boton_casa"
            style="@style/button_elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde"
            android:text="Casa"
            android:textColor="@color/white"
            app:backgroundTint="@color/naranja_suave"
            app:icon="@drawable/baseline_home_24"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectOption" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/boton_sensores"
            style="@style/button_elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde"
            android:text="@string/sensores"
            android:textColor="@color/white"
            app:backgroundTint="@color/naranja_suave"
            app:icon="@drawable/baseline_contacts_24"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boton_casa" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/boton_camara"
            style="@style/button_elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Camara"
            android:textColor="@color/white"
            app:backgroundTint="@color/verde"
            app:icon="@drawable/baseline_contacts_24"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boton_sensores" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/boton_ubicacion"
            style="@style/button_elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ubicacion"
            android:textColor="@color/white"
            app:backgroundTint="@color/verde"
            app:icon="@drawable/baseline_contacts_24"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boton_camara" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/boton_contactos"
            style="@style/button_elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactos"
            android:textColor="@color/white"
            app:backgroundTint="@color/verde"
            app:icon="@drawable/baseline_contacts_24"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boton_ubicacion" />

    </LinearLayout>

    <android.widget.Toolbar
        android:id="@+id/barraInferior"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:elevation="-4dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imagenLogoToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/logo_securityhome"></ImageView>
    </android.widget.Toolbar>
</androidx.constraintlayout.widget.ConstraintLayout>